--- a/css/style.css
+++ b/css/style.css
@@ -305,6 +305,43 @@ header .shopping-cart .box .content .quantity{
     color: var(--light-color);
     padding: 1rem;
 }
+.products .product-slider{
+    padding: 1rem;
+}
+.products .product-slider:first-child{
+    margin-bottom: 2rem;
+}
+.products .product-slider .box{
+    background: #fff;
+    border-radius: .5rem;
+    text-align: center;
+    padding: 3rem 2rem;
+    outline-offset: -1rem;
+    outline: var(--outiline);
+    box-shadow: var(--box-shadow);
+    transition: .2s linear;
+}
+.products .product-slider .box:hover{
+    outline-offset: 0;
+    outline: var(--outiline-hover);
+}
+.products .product-slider .box img{
+    height: 20rem;
+}
+.products .product-slider .box h3{
+    font-size: 2.5rem;
+    color: var(--black);
+}
+.products .product-slider .box h3{
+    font-size: 2rem;
+    color: var(--light-color);
+    padding: .5rem 0;
+}
+.products .product-slider .box .stars{
+    font-size: 1.7rem;
+    color: var(--orange);
+    padding: .5rem 0;
+}
 
 
 
