--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     --orange : #ff7800;
     --black: #130f40;
     --light-color:#666;
-    --box-shadow:0 1.5rem 1rem rgba(0,0,0,1);
+    --box-shadow:0 .5rem 1rem rgba(0,0,0,1);
     /* --box-shadow:0 .5rem 1rem rgba(0,0,0,1); */
     --border:.2rem solid rgba(0,0,0,1);
     --outiline:0.1rem solid rgba(0,0,0,0.1);
@@ -376,16 +376,44 @@ header .shopping-cart .box .content .quantity{
     line-height: 1.8;
     padding: 1rem 0;
  }
-
-/* .categories .box-container .box{
-    padding: 3rem 2rem;
+.review .review-slider{
+    padding: 1rem;
+}
+.review .review-slider .box{
     background: #fff;
-    outline: var(--outiline);
-    outline-offset:-1rem ;
+    border-radius: .5rem;
     text-align: center;
+    padding: 3rem 2rem;
+    outline-offset: -1rem;
+    outline: var(--outiline);
     box-shadow: var(--box-shadow);
-} */
-
+    transition: .2s linear; 
+}
+.review .review-slider .box:hover{
+    outline-offset: 0;
+    outline: var(--outiline-hover);
+}
+.review .review-slider .box img{
+    height: 10rem;
+    width: 10rem;
+    border-radius: 50%;
+}
+.review .review-slider .box p{
+    padding:1rem 0;
+    line-height: 1.8;
+    color: var(--light-color);
+    font-size: 1.5rem;
+}
+.review .review-slider .box h3{
+    padding-bottom:.5rem;
+    line-height: 1.8;
+    color: var(--black);
+    font-size: 2.2rem;
+}
+.review .review-slider .box .stars i{
+    color: var(--orange);
+    font-size: 1.7rem;
+}
 
 
 
