--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     --light-color:#666;
     --box-shadow:0 .5rem 1rem rgba(0,0,0,1);
     /* --box-shadow:0 .5rem 1rem rgba(0,0,0,1); */
-    --border:.2rem solid rgba(0,0,0,1);
+    --border:.2rem solid rgba(0,0,0,0.1);
     --outiline:0.1rem solid rgba(0,0,0,0.1);
     --outiline-hover:.2rem solid var(--black);
 
@@ -414,7 +414,56 @@ header .shopping-cart .box .content .quantity{
     color: var(--orange);
     font-size: 1.7rem;
 }
-
+.blogs .box-container{
+    display: grid;
+    grid-template-columns:repeat(auto-fit,minmax(24rem,1fr));
+    gap:1.5rem;
+}
+.blogs .box-container .box{
+    overflow: hidden;
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+    background: #fff;
+}
+.blogs .box-container .box img{
+    height: 25rem;
+    width: 100%;
+    object-fit: cover;
+}
+.blogs .box-container .box .content{
+    padding:2rem;
+}
+.blogs .box-container .box .content .icons{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 1.5rem;
+    margin-bottom: 1rem;
+    border-bottom: var(--border);
+}
+.blogs .box-container .box .content .icons a{
+    color: var(--light-color);
+    font-size: 1.5rem;
+}
+.blogs .box-container .box .content .icons a:hover{
+    color: var(--black);
+}
+.blogs .box-container .box .content .icons a i{
+    color: var(--orange);
+    padding-right: .5rem;
+}
+.blogs .box-container .box .content h3{
+    line-height: 1.8;
+    color: var(--black);
+    font-size: 2.2rem;
+    padding: .5rem 0;
+}
+.blogs .box-container .box .content p{
+    line-height: 1.8;
+    color: var(--light-color);
+    font-size: 1.5rem;
+    padding: .5rem 0;
+}
 
 
 
