--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     --orange : #ff7800;
     --black: #130f40;
     --light-color:#666;
-    --box-shadow:0 .5rem 1rem rgba(0,0,0,1);
+    --box-shadow:0 1.5rem 1rem rgba(0,0,0,.1);
     /* --box-shadow:0 .5rem 1rem rgba(0,0,0,1); */
     --border:.2rem solid rgba(0,0,0,0.1);
     --outiline:0.1rem solid rgba(0,0,0,0.1);
@@ -416,7 +416,7 @@ header .shopping-cart .box .content .quantity{
 }
 .blogs .box-container{
     display: grid;
-    grid-template-columns:repeat(auto-fit,minmax(24rem,1fr));
+    grid-template-columns:repeat(auto-fit,minmax(30rem,1fr));
     gap:1.5rem;
 }
 .blogs .box-container .box{
@@ -510,12 +510,95 @@ header .shopping-cart .box .content .quantity{
     }
 
 }
+
+.footer{
+    background: #fff;
+}
+.footer .box-container{
+    display: grid;
+    grid-template-columns:repeat(auto-fit,minmax(25rem,1fr));
+    gap:1.5rem;
+}
+.footer .box-container h3{
+   font-size: 2.5rem;
+   color: var(--black);
+   padding: 1rem 0;
+}
+.footer .box-container .box h3 i{
+   color: var(--orange);
+ }
+ .footer .box-container .box .links{
+     display: block;
+    font-size: 1.5rem;
+    color: var(--light-color);
+    padding: 1rem 0;
+ }
+ .footer .box-container .box .links i{
+     color: var(--orange);
+     padding-right: .5rem;
+ }
+
+ .footer .box-container .box .links:hover i{
+    padding-right:2rem;
+}
+ .footer .box-container .box p{
+    line-height: 1.8;
+   font-size: 1.5rem;
+   color: var(--light-color);
+   padding: 1rem 0;
+}
+.footer .box-container .box .share a{
+    height:4rem;
+    width: 4rem;
+    line-height: 4rem;
+    border-radius:.5rem;
+    font-size: 2rem;
+    color: var(--black);
+    margin-left: .2rem;
+    background: #eee;
+    text-align: center;
+}
+.footer .box-container .box .share a:hover{
+    background: var(--orange);
+    color: #fff;
+}
+.footer .box-container .box .email{
+    width: 100%;
+    margin: .7rem 0;
+    padding: 1rem;
+    border-radius: .5rem;
+    background: #eee;
+    font-size: 1.6rem;
+    color: var(--black);
+    text-transform: none;
+}
+.footer .box-container .box .payment-img{
+    margin-top: 2rem;
+    height: 3rem;
+}
+
+.footer .credit{
+    text-align: center;
+    margin-top:2rem;
+    padding:1rem;
+    padding-top: 2rem;
+    font-size: 2rem;
+    color: var(--black);
+    border-top: var(--border);
+}
+.footer .credit span{
+    color: var(--orange);
+}
+
 @media (max-width:450px){
     html{
         font-size: 50%;
     }
     .heading{
         font-size: 2.5rem;
+    }
+    .footer{
+        text-align: center;
     }
 
 }
